--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
     <header class="cabecalho">
         <nav class="cabecalho__menu">
             <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link"href="about.html">Sobre mim</a>
+            <a class="cabecalho__menu__link"href="about.html">About</a>
         </nav>
     </header>
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
-            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um Front-end de qualidade!</strong></h1>
-            <p class="apresentacao__conteudo__texto">Olá! Sou Joana Santos, desenvolvedora Front-end com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
+            <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um mapa no Roblox de qualidade!</strong></h1>
+            <p class="apresentacao__conteudo__texto">Olá! Sou Arthur Carvalho, desenvolvedor de mapas no Roblox com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
                 <div class="apresentacao__links">
                     <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
                     <a class="apresentacao__links__navegacao" href="https://instagram.com/">
@@ -29,7 +29,7 @@
                         <img src="./assets/twitch.png"> Twitch</a>
                 </div>
         </section>
-        <img class="apresentacao__imagem" alt="Imagem da Joana Santos programando" src="./assets/Imagem.png">
+        <img class="apresentacao__imagem" alt="Imagem da Joana Santos programando" src="./assets/baixados.png">
     </main>
     <footer class="rodape"><p>Desenvolvido por Alex Silva.</p></footer>
 </body>
