Atualizacao link Github

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <a class="apresentacao__links__navegacao" href="https://instagram.com/">
                         <img src="./assets/instagram.png">Instagram
                     </a>
-                    <a class="apresentacao__links__navegacao" href="https://github.com/">
+                    <a class="apresentacao__links__navegacao" href="https://github.com/Katakuna2011">
                         <img src="./assets/github.png"> GitHub</a>
                     <a class="apresentacao__links__navegacao" href="https://www.twitch.tv/">
                         <img src="./assets/twitch.png"> Twitch</a>
