--- a/index.html
+++ b/index.html
@@ -10,8 +10,10 @@
 <body>
     <header class="cabecalho">
         <nav class="cabecalho__menu">
-            <a class="cabecalho__menu__link" href="index.html">Home</a>
-            <a class="cabecalho__menu__link"href="about.html">About</a>
+            <a class="cabecalho__menu__link" href="./index.html">Home</a>
+            <a class="cabecalho__menu__link"href= "./musics.html">Musicas</a>
+            <a class="cabecalho__menu__link"href="./trailers.html">Trailers</a>
+            <a class="cabecalho__menu__link"href="./about.html">About</a>
         </nav>
     </header>
     <main class="apresentacao">
