--- a/index.html
+++ b/index.html
@@ -20,19 +20,23 @@
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Eleve seu negócio digital a outro nível <strong class="titulo-destaque">com um mapa no Roblox de qualidade!</strong></h1>
             <p class="apresentacao__conteudo__texto">Olá! Sou Arthur Carvalho, desenvolvedor de mapas no Roblox com especialidade em React, HTML e CSS. Ajudo pequenos negócios e designers a colocarem em prática boas ideias. Vamos conversar?</p>
-                <div class="apresentacao__links">
-                    <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
-                    <a class="apresentacao__links__navegacao" href="https://instagram.com/">
-                        <img src="./assets/instagram.png">Instagram
-                    </a>
-                    <a class="apresentacao__links__navegacao" href="https://github.com/Katakuna2011">
-                        <img src="./assets/github.png"> GitHub</a>
-                    <a class="apresentacao__links__navegacao" href="https://www.twitch.tv/">
-                        <img src="./assets/twitch.png"> Twitch</a>
-                </div>
+            <div class="apresentacao__links">
+                <h2 class="apresentacao__links__subtitulo">Acesse minhas redes:</h2>
+                <a class="apresentacao__links__navegacao" href="https://instagram.com/">
+                    <img src="./assets/instagram.png">Instagram
+                </a>
+                <a class="apresentacao__links__navegacao" href="https://github.com/Katakuna2011">
+                    <img src="./assets/github.png"> GitHub</a>
+                <a class="apresentacao__links__navegacao" href="https://www.twitch.tv/">
+                    <img src="./assets/twitch.png"> Twitch</a>
+            </div>
         </section>
-        <img class="apresentacao__imagem" alt="Imagem da Joana Santos programando" src="./assets/baixados.png">
+        <section>
+            <img class="apresentacao__imagem" alt="Imagem da Joana Santos programando" src="./assets/baixados.png">
+        </section>
     </main>
-    <footer class="rodape"><p>Desenvolvido por Alex Silva.</p></footer>
+    <div class="rodape__container">
+        <footer class="rodape rodape__absolute"><p>Desenvolvido por Alex Silva.</p></footer>
+    </div>
 </body>
 </html>
