--- a/musics.html
+++ b/musics.html
@@ -20,14 +20,16 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">LISTA DE MÚSICAS</h1>
-                <div class="apresentacao__links">
-                    <h2 class="apresentacao__links__subtitulo">Selecione um estilo musical:</h2>
-                    <a class="apresentacao__links__navegacao" href="./musics/forro.html">Forró</a>
-                    <a class="apresentacao__links__navegacao" href="./musics/rock.html">Rock</a>
-                    <a class="apresentacao__links__navegacao" href="./musics/lofi.html">Lo-Fi</a>
-                </div>
-        </section>
+            <h2 class="apresentacao__links__subtitulo">Selecione um estilo musical:</h2>
+    </section>
     </main>
+    <section>
+        <div class="apresentacao__links">
+          <a class="apresentacao__links__navegacao" href="./musics/forro.html">Forró</a>
+           <a class="apresentacao__links__navegacao" href="./musics/rock.html">Rock</a>
+           <a class="apresentacao__links__navegacao" href="./musics/lofi.html">Lo-Fi</a>
+        </div>
+    </section>
     <footer class="rodape"><p>Desenvolvido por Alex Silva</p></footer>
 </body>
 </html>
