--- a/trailers.html
+++ b/trailers.html
@@ -19,14 +19,17 @@
     <main class="apresentacao">
         <section class="apresentacao__conteudo">
             <h1 class="apresentacao__conteudo__titulo">Lista de trailers</h1>
-                <div class="apresentacao__links">
-                    <h2 class="apresentacao__links__subtitulo">Selecione um tipo de filme:</h2>
-                    <a class="apresentacao__links__navegacao" href="./trailers/comedy.html">Comédia</a>
-                    <a class="apresentacao__links__navegacao" href="./trailers/horror.html">Terror</a>
-                    <a class="apresentacao__links__navegacao" href="./trailers/scifi.html">Sci-Fi</a>
-                </div>
+            <h2 class="apresentacao__links__subtitulo">Selecione um tipo de filme:</h2>
         </section>
     </main>
+    <section>
+    
+        <div class="apresentacao__links">
+            <a class="apresentacao__links__navegacao" href="./trailers/comedy.html">Comédia</a>
+            <a class="apresentacao__links__navegacao" href="./trailers/horror.html">Terror</a>
+            <a class="apresentacao__links__navegacao" href="./trailers/scifi.html">Sci-Fi</a>
+        </div>
+    </section>
     <footer class="rodape"><p>Desenvolvido por Alex Silva</p></footer>
 </body>
 </html>
